force.com/CALM/src/objects/Session__c.object
<CustomObject>
    <fields>
        <fullName>Session_Length__c</fullName>
        <description>Session length in milliseconds</description>
        <formula>et__c - st__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>au__c</fullName>
        <description>The key that differentiates different Android applications.</description>
        <inlineHelpText>The key that differentiates different Android applications.</inlineHelpText>
        <label>Application Key</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>av__c</fullName>
        <description>Version of the Android application that uses the CALM API</description>
        <inlineHelpText>Version of the Android application that uses the CALM API</inlineHelpText>
        <label>Application Version</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dlc__c</fullName>
        <description>Country for the device&apos;s current locale settings</description>
        <inlineHelpText>Country for the device&apos;s current locale settings</inlineHelpText>
        <label>Country</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dll__c</fullName>
        <description>Language for the device&apos;s current locale settings</description>
        <inlineHelpText>Language for the device&apos;s current locale settings</inlineHelpText>
        <label>Language</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dma__c</fullName>
        <description>Manufacturer of the device on which the Android application runs</description>
        <inlineHelpText>Manufacturer of the device on which the Android application runs</inlineHelpText>
        <label>Device Manufacturer</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dmo__c</fullName>
        <description>Model of the device on which the Android application runs</description>
        <inlineHelpText>Model of the device on which the Android application runs</inlineHelpText>
        <label>Device Model</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dov__c</fullName>
        <description>The Android OS Version</description>
        <inlineHelpText>The Android OS Version</inlineHelpText>
        <label>Android Version</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>du__c</fullName>
        <description>The key that differentiates unique Android devices.</description>
        <inlineHelpText>The key that differentiates unique Android devices.</inlineHelpText>
        <label>Device Android Id Hash</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et__c</fullName>
        <description>The time at which the session was closed</description>
        <inlineHelpText>The time at which the session was closed</inlineHelpText>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>lv__c</fullName>
        <description>Version of the CALM API</description>
        <inlineHelpText>Version of the CALM API</inlineHelpText>
        <label>API Version</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nca__c</fullName>
        <description>Network carrier of the device.</description>
        <inlineHelpText>Network carrier of the device.</inlineHelpText>
        <label>Network Carrier</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nr__c</fullName>
        <description>This marks a session object as &apos;New&apos; or &apos;Returning&apos; if the device ID of the android phone is a new ID or an ID that already exists in the database. True/Checked denotes a &apos;New&apos; device ID and False/Unchecked denotes a &apos;Returning&apos; user.</description>
        <inlineHelpText>&apos;Y&apos; if the Android Device ID is new as of this Session, &apos;N&apos; otherwise.</inlineHelpText>
        <label>New vs Returning User</label>
        <length>1</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>st__c</fullName>
        <description>The time at which the session was opened</description>
        <inlineHelpText>The time at which the session was opened</inlineHelpText>
        <label>Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>u__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique ID of the Session</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique ID of the Session</inlineHelpText>
        <label>Session ID</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Session</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DetailedSessions</fullName>
        <columns>u__c</columns>
        <columns>st__c</columns>
        <columns>et__c</columns>
        <columns>au__c</columns>
        <columns>dov__c</columns>
        <columns>lv__c</columns>
        <columns>av__c</columns>
        <columns>dlc__c</columns>
        <columns>dll__c</columns>
        <columns>dma__c</columns>
        <columns>dmo__c</columns>
        <columns>du__c</columns>
        <columns>nca__c</columns>
        <columns>nr__c</columns>
        <filterScope>Everything</filterScope>
        <label>Detailed Sessions</label>
    </listViews>
    <nameField>
        <label>Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>